force-app/main/default/objects/Evaluation__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <inlineHelpText>Logical Flow, Points Supported By Examples</inlineHelpText>
    <label>Body of Speech</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>