force-app/main/default/objects/Evaluation__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Evaluations</relationshipLabel>
    <relationshipName>Evalulations</relationshipName>
    <type>Lookup</type>
</CustomField>