force-app/main/default/objects/Evaluation__c/fields/ObjectivesMet__c.field-meta.xml
<CustomField>
    <fullName>ObjectivesMet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did the speaker meet speech objectives?</label>
    <type>Checkbox</type>
</CustomField>