force-app/main/default/objects/Evaluation__c/fields/PhysicalActions__c.field-meta.xml
<CustomField>
    <fullName>PhysicalActions__c</fullName>
    <inlineHelpText>Body Movement, Eye Contact, Gestures, Facial Expressions, Voice (Volume, Variety)</inlineHelpText>
    <label>Physical Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>