force-app/main/default/objects/Evaluation__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Evaluations</relationshipLabel>
    <relationshipName>MyEvaluations</relationshipName>
    <type>Lookup</type>
</CustomField>