force-app/main/default/objects/Evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MeetingDate__c</columns>
    <columns>Speaker__c</columns>
    <columns>Evaluator__c</columns>
    <columns>ObjectivesMet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>